# toys

./: .gitignore  Cargo.toml  Config  Deps  Makefile  aliases.sh  stack.yaml
exe/: HaskellScript.hs  databot  haskellscript-10.0  haskellscript-9.14  pomodoro-timer
pkg/archive/: archive.sh  deps.dhall  ipfs-persist  run
pkg/copy-blocks/: package.yaml
pkg/copy-blocks/app/: Main.hs
pkg/cs1010-lab1-rs/: Cargo.toml
pkg/cs1010-lab1-rs/src/: main.rs
pkg/f-var/: package.yaml
pkg/f-var/src/: FVar.hs
pkg/f-var/test/: Spec.hs
pkg/fatty-prelude/: package.yaml
pkg/fatty-prelude/src/: FattyPrelude.hs
pkg/get-new-posts-on-subreddit/: package.yaml
pkg/get-new-posts-on-subreddit/src/: Main.hs
pkg/humblr/: Main.hs  humblr.cabal
pkg/humblr/src/Web/: Tumblr.hs
pkg/humblr/src/Web/Tumblr/: Types.hs
pkg/ipfs-s3-bridge/: package.yaml
pkg/ipfs-s3-bridge/app/: Main.hs
pkg/lab1010-1-hs/: lab1.hs  package.yaml
pkg/multiwiki/: .gitignore  find-title.hs  mkwiki.sh  runme.sh  runserver.sh  takeout-upload.hs  wiki-words.hs
pkg/mutbst-rs/: Cargo.toml
pkg/mutbst-rs/src/: lib.rs
pkg/mutlist-rs/: Cargo.toml
pkg/mutlist-rs/src/: lib.rs
pkg/papers-on-ipfs/: package.yaml
pkg/papers-on-ipfs/src/: Main.hs
pkg/pomo/: package.yaml  pomo.hs
pkg/post-photo-to-tumblr/: package.yaml  post-photo-to-tumblr.hs
pkg/post-photo-to-tumblr/src/: Main.hs
pkg/turkish/: package.yaml  turkish.hs
pkg/workdown/: package.yaml  workdown.hs
script/: ipfs-add-to-dir  pomodoro  pomodoro-timer
template/: Makefile  doc.css  index.html  index.md
(+4 files in other folders)
