name:                humblr
version:             0.2.0.0
synopsis:            Haskell wrapper for the Tumblr API
homepage:            https://github.com/Taneb/humblr
license:             BSD3
license-file:        LICENSE
author:              Nathan "Taneb" van Doorn
maintainer:          nvd1234@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Web.Tumblr
                     , Web.Tumblr.Types

  other-modules:       Web.Tumblr.Helpers

  build-depends:       base
                     , mtl
                     , aeson
                     , attoparsec
                     , bytestring
                     , conduit
                     , conduit-extra
                     , monad-control
                     , resourcet
                     , attoparsec-conduit
                     , http-conduit
                     , http-types
                     , authenticate-oauth
                     , time
                     , old-locale
                     , unordered-containers
                     , process
                     , url

  hs-source-dirs:      src

executable Humblr-test
  main-is:             Main.hs
  build-depends:       base
                     , mtl
                     , resourcet
                     , http-conduit
                     , bytestring
                     , authenticate-oauth
                     , http-client
                     , humblr
